# my_study_note

./: README.md  雾净.docx
.obsidian/: graph.json  workspace.json
FPGA/: FPGA分频器.md  FPGA循环语句.md  FPGA状态机.md  FPGA静态数据.md  sim.v
Git/: git.md
Image processing theory/: SIFT.md
Processing theory/: I2S简介.md  WAV格式文件.md  mkv and mp4.md  pthreads线程库.md  rtsp协议.md  什么是 URL.md  各类滤波算法.md  张量.md  自适应滤波器原理.md
cpp/: c++拷贝构造函数.md  cpp_auto与decltype.md  cpp_first.md  cpp_foreach循环.md  cpp_lambda.md  cpp_this.md  cpp函数类对象.md  cpp单例模式.md  cpp容器.md  cpp左值右值.md  cpp模板例化.md  cpp的.inc文件.md  cpp的ostream类.md  cpp移动构造函数.md  cpp类型转换运算符.md  cpp类对象和类指针.md  cpp设计模式.md  cpp防卫式声明.md  cpp静态.md  stack and heap.md  谷歌cpp代码风格.md
gcc  and cmake/: gcc链接库.md
gcc vscode vs  and cmake/: cmake构建.md  cmake语法.md
linux/: Linux磁盘操作.md  linux常用指令集.md  linux文件目录权限.md  vi与vim.md
openwrt/: 资料原件.md  (+2 more)
系统/linux/: CMakeLists.txt  Linux下CPP工程模板.md  build.sh  main.cpp
系统/linux/basics/: Linux指令操作.md  linux找回root密码.md  linux环境变量.md  linux管理与配置.md  linux系统备份与恢复.md  定制linux系统.md  添加一块磁盘.md
系统/linux/basics/Administration and Configuration/: linuxubuntu初始配置.md  linux定时任务调度.md  linux日志管理.md  linux网络配置.md  linux进程管理.md
系统/linux/basics/command/: 关机重启.md  压缩解压类.md  帮助指令.md  搜索查找类.md  文件目录.md  文件目录权限.md  时间日期类.md  用户管理.md  磁盘操作.md
系统/linux/basics/theory/: linux文件目录权限.md  vi与vim.md  文本less查看.md  文本more查看.md  用户级别.md
系统/linux/tools_and_libraries/: LInu时区问题.md  OpenCV-C++安装.md  ffmpeg安装.md  linux创建环境.md  linux安装依赖关系冲突解决方案.md  nginx与rtmp.md  ubuntu安装.md  v4l2-ctl.md  整套cpp工作链.md  查看摄像头挂载.md  树莓派安装Python3.9.md
(+255 files in other folders)
